Add filename to upload request (#77)